welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:21: error: value Red is not a member of object java.awt.Color
	faireV(Color.Red);
                     ^